# villa_sound

./: .gitignore  README.md
calibration/: .gitignore  README.md  imp_tsp.py  tsp_gen.py
calibration/tools/: calibrate.sh
hark-villa/: .gitignore  COPYING  README  acconfig.h  autogen.sh  configure.ac
hark-villa/debian/: README  changelog  control  copyright  rules
hark-villa/include/: HarkVillaGlobals.h  RecogSource.h
hark-villa/m4/: boost.m4
hark-villa/src/: Makefile.am  VERSION.cc  VillaCMLoad.cc  VillaReadSharedMicrophone.cc  VillaSharedMicrophone.cc
villa_audio/: CMakeLists.txt  package.xml  setup.py
villa_audio/env-hooks/: villa_audio.sh
villa_audio/include/villa_audio/: shared_microphone_stream.h
villa_audio/scripts/: audiologger  google_interface.py  google_speech.py  sound_transcript_service.py  xml_reader.py
villa_audio/share/: Locations_mod.xml  Objects_mod.xml  google_speech_key.json
villa_audio/src/: shared_microphone_stream.cpp  shared_microphone_stream_wrapper.cpp
villa_audio/src/beamformer/base/: CMakeLists.txt  array_view.h  checks.cc  checks.h  event_tracer.cc  format_macros.h  logging.cc  logging.h  platform_file.cc  platform_file.h  platform_thread.cc  safe_compare.h  safe_conversions.h  timeutils.cc
villa_audio/src/beamformer/beamformer/: CMakeLists.txt  array_util.cc  array_util.h  audio_processing.cc  audio_processing.h  complex_matrix.h  config.h  covariance_matrix_generator.cc  covariance_matrix_generator.h  matrix.h  module_common_types.h  nonlinear_beamformer.cc  nonlinear_beamformer.h  nonlinear_beamformer_test.cc  test_utils.cc  test_utils.h
villa_audio/src/beamformer/common_audio/: CMakeLists.txt  audio_ring_buffer.cc  audio_util.cc  audio_util.h  blocker.cc  blocker.h  channel_buffer.cc  channel_buffer.h  lapped_transform.cc  lapped_transform.h  real_fourier.cc  real_fourier.h  real_fourier_ooura.cc  real_fourier_ooura.h  real_fourier_openmax.cc  real_fourier_openmax.h  ring_buffer.c  wav_file.cc  wav_file.h  wav_header.cc  window_generator.cc
villa_audio/src/beamformer/common_audio/signal_processing/: dot_product_with_scale.h
villa_audio/src/beamformer/common_audio/signal_processing/include/: signal_processing_library.h  spl_inl.h
villa_audio/src/beamformer/system_wrappers/: CMakeLists.txt  aligned_array.h  aligned_malloc.cc
villa_audio/src/villa_audio/: __init__.py  _shared_microphone_stream_wrapper_py.py
villa_audio/srv/: RequestSoundTranscript.srv
villa_sound_localization/: .gitignore  CMakeLists.txt  build_custom_nodes.sh  package.xml  setup.py
villa_sound_localization/scripts/: calibrate_noise  sound_localization  visualize
villa_sound_localization/share/network/: audiostream_sharedmem.n  localization_publisher.n  localization_publisher_nonormalize.n  localization_publisher_rosbag.n  noise_calibration.n
villa_sound_localization/src/villa_sound_localization/: motionhandler.py  noise.py  plotmusic.py  settings.py
