<?xml version="1.0"?>
<package>
  <name>villa_sound_localization</name>
  <version>0.0.0</version>
  <description>The villa_sound_localization package</description>


  <maintainer email="rishi@todo.todo">rishi</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>hark_msgs</build_depend>

  <run_depend>rospy</run_depend>

  <export>
  </export>
</package>
